# Cisco-DevNet

./: README.md  hello_world.py  pyproject.toml  unittesting.py
ACI/: aci_requests.py
Meraki/: dashboard.py  notes.md  postman.py  sdk.py
Netconf-106/: netconf-1-2.py  netconf-3-5.py  netconf-schema.py  router_info.py
Nexus-115/: nxapi_cdp.py  nxapi_cli.py  nxapi_rest.py  nxapi_sandbox.py
Notes/: 1 Software Design & Development.md  12 NetConf with Python.md  2.10 Automation Environment Setup.md  2.4 HTTP Parameters and Payloads.md  2.7 Evolution of APIs.md  Course Overview.md
Notes/1 Software Development & Design/: 1.1 Abstract Coding Concept.md  1.3 Git.md  1.4 Design Patterns.md  1.5 XML, JSON, & YAML.md
Notes/2 Using & Understanding APIs/: 13 Restconf with Python.md  2.1 RESTful APIs.md  2.11 Data Models.md  2.3 HTTP Headers, Methods & Status Codes.md  2.5 Authentication vs Authorization.md  2.6 Postman.md  2.8 Network Programmability vs Network Automation.md  2.9 SDNs.md
Notes/3 Cisco Platforms & Development/: 1 Nexus Intro.md  10 Docker.md  11 CI-CD.md  12 OWASP.md  13 Linux & Bash.md  14 Principles of DevOps Practices.md  15 Unit Testing & TDD.md  2 Meraki.md  3 ACI Architecture.md  4 ACI Object Model.md  6 Webex.md  7 SDWAN.md  8 SD-Security.md  9 Firewall Management Center.md
Notes/4 Networking/: 1 Layer 2 - Network.md  (+3 more)
Restconf-110/: 0.restconf-capabilites.py  1.restconf-interfaces.py  2.aaa_challenge.py
examples/: aaa-types.yang  api_client_ext.html
resources/: __init__.py  module1.py  module2.py
xmltodict/: sample.xml  xmltodict_example.py
(+2 files in other folders)
