[tool.poetry]
name = "cisco-devnet"
version = "0.1.0"
description = ""
authors = ["ns03444 <nicholasspell@ymail.com>"]
readme = "README.md"
packages = [{include = "cisco_devnet"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"
lxml = "^5.1.0"
xmltodict = "^0.13.0"
ncclient = "^0.6.15"
requests = "^2.31.0"
meraki-sdk = "^1.5.0"
ipython = "^8.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
